[package]
name = "utwid_rl"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
clap-verbosity-flag = "3.0.0"
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["serde_derive"] }
serde_json = "1.0.133"
chrono = "0.4.39"
linked_hash_set = "0.1.5"

[dev-dependencies]
test-env-log = "0.2.8"


[[bin]]
name = "utwid_rl"
path = "src/utwid.rs"
